--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -7,3 +7,7 @@ ja:
         fare: 切符
         entered_gate_id: 乗車駅
         exited_gate_id: 降車駅
+  errors:
+    format: "%{attribute}%{message}"
+    messages:
+      blank: を入力してください。
